--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,24 @@
 [versions]
-agp = "8.11.1"
-ezxhelper = "3.0.1"
-kotlin = "2.2.0"
+agp = "8.13.2"
+kotlin = "2.3.0"
 xposed-api = "82"
+material3 = "1.5.0-alpha11"
+material = "1.13.0"
+appcompat = "1.7.1"
+constraintlayout = "2.2.1"
+navigation-fragment-ktx = "2.9.6"
+navigation-ui-ktx = "2.9.6"
 
 [libraries]
-xposed-api = { module = "de.robv.android.xposed:api", version.ref = "xposed-api" }
-ezxhelper-android-utils = { module = "io.github.kyuubiran.ezxhelper:android-utils", version.ref = "ezxhelper" }
-ezxhelper-core = { module = "io.github.kyuubiran.ezxhelper:core", version.ref = "ezxhelper" }
-ezxhelper-xposed-api = { module = "io.github.kyuubiran.ezxhelper:xposed-api-82", version.ref = "ezxhelper" }
+xposed-api = { group = "de.robv.android.xposed", name = "api", version.ref = "xposed-api" }
+ezxhelper = { group = "com.github.kyuubiran", name = "EzXHelper", version = "2.2.1" }
+ezxhelper-xposed-api = { module = "io.github.kyuubiran.ezxhelper:xposed-api-82", version = "3.0.1" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-fragment-ktx" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ui-ktx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
