--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.13.2"
 kotlin = "2.3.0"
 xposed-api = "82"
+ezxhelper = "3.0.1"
 material = "1.13.0"
 appcompat = "1.7.1"
 constraintlayout = "2.2.1"
@@ -13,8 +14,9 @@ documentfile = "1.1.0"
 
 [libraries]
 xposed-api = { group = "de.robv.android.xposed", name = "api", version.ref = "xposed-api" }
-ezxhelper = { group = "com.github.kyuubiran", name = "EzXHelper", version = "2.2.1" }
-ezxhelper-xposed-api = { module = "io.github.kyuubiran.ezxhelper:xposed-api-82", version = "3.0.1" }
+ezxhelper-android-utils = { module = "io.github.kyuubiran.ezxhelper:android-utils", version.ref = "ezxhelper" }
+ezxhelper-core = { module = "io.github.kyuubiran.ezxhelper:core", version.ref = "ezxhelper" }
+ezxhelper-xposed-api = { module = "io.github.kyuubiran.ezxhelper:xposed-api-82", version.ref = "ezxhelper" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
