--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -51,16 +51,21 @@ jobs:
         if: env.USE_SECRET_KEYSTORE == 'false'
         run: |
           mkdir -p ~/.android
-          keytool -genkeypair -alias androiddebugkey -keypass android -keystore ~/.android/debug.keystore -storepass android -dname "CN=Android Debug,O=Android,C=US"
+          keytool -genkeypair \
+                  -alias androiddebugkey \
+                  -keyalg RSA \
+                  -keysize 2048 \
+                  -validity 10000 \
+                  -keystore ~/.android/debug.keystore \
+                  -storepass android \
+                  -keypass android \
+                  -dname "CN=Android Debug,O=Android,C=US"
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build Debug
-        run: ./gradlew assembleDebug
-
-      - name: Build Release
-        run: ./gradlew assembleRelease
+      - name: Build with Gradle
+        run: ./gradlew assembleDebug assembleRelease
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
