--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -24,7 +24,7 @@ jobs:
       contents: write
     outputs:
       version: ${{ steps.modify.outputs.version }}
-
+      new_sha: ${{ steps.get_sha.outputs.sha }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -59,6 +59,11 @@ jobs:
           git commit -m "[skip ci] chore: bump version to ${{ steps.modify.outputs.version }}" || exit 0
           git push
 
+      - name: Get New SHA
+        id: get_sha
+        run: |
+          echo "sha=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
+
   build_and_release:
     needs: modify_version
     environment: main_build
@@ -71,6 +76,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ needs.modify_version.outputs.new_sha }}
 
       - name: set up JDK 21
         uses: actions/setup-java@v4
@@ -159,4 +165,5 @@ jobs:
             export TELEGRAM_BOT_TOKEN=${{secrets.TELEGRAM_BOT_TOKEN}}
             wget https://raw.githubusercontent.com/0penPublic/onHit/refs/heads/misc/telegram_on_hit_ci_bot.py
             python3 -m pip install python-telegram-bot==22.5
+
             python3 telegram_on_hit_ci_bot.py ${{ needs.modify_version.outputs.version }}
