[skip ci] Update workflow

--- a/.github/workflows/android_on_push.yml
+++ b/.github/workflows/android_on_push.yml
@@ -6,6 +6,9 @@ permissions:
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - '.github/workflows/android_on_push.yml'
+      - 'app/**'
     
 jobs:
   build:
