--- a/.github/workflows/android_on_push.yml
+++ b/.github/workflows/android_on_push.yml
@@ -58,8 +58,9 @@ jobs:
           path: app/build/outputs/apk/release/*
 
       - name: Send To Telegram Group
+        env:
+            TELEGRAM_BOT_TOKEN: ${{secrets.TELEGRAM_BOT_TOKEN}}
         run: |
-          export TELEGRAM_BOT_TOKEN=${{secrets.TELEGRAM_BOT_TOKEN}}
-          wget https://raw.githubusercontent.com/0penPublic/onHit/refs/heads/misc/telegram_on_hit_ci_bot.py
-          python3 -m pip install python-telegram-bot==22.5
-          python3 telegram_on_hit_ci_bot.py
+            wget https://raw.githubusercontent.com/0penPublic/onHit/refs/heads/misc/telegram_on_hit_ci_bot.py
+            python3 -m pip install python-telegram-bot==22.5
+            python3 telegram_on_hit_ci_bot.py
