--- a/.github/workflows/android_on_push.yml
+++ b/.github/workflows/android_on_push.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - '.github/workflows/android_on_push.yml'
       - 'app/**'
-      - '‎gradle/**'
+      - 'gradle/**'
     
 jobs:
   build:
