ci: Restrict README sync job to source repository

--- a/.github/workflows/push-sync-xmr-readme.yml
+++ b/.github/workflows/push-sync-xmr-readme.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
     sync:
+        if: github.repository == '0penPublic/onHit'
         environment: main_build
         runs-on: ubuntu-latest
 
